Tests/ShouldSucceed/try14.adl
CONTEXT Try14 IN ENGLISH

PATTERN Try14
r :: A*C
s :: A*B
q :: B*C
RULE r = -(-s;-q)
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is meant to study the equivalence of -(-s;-q) and s!q.
   Result: PASS
   
-}